# bharatrag

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  test_embedder.py
.github/workflows/: tests.yml
bharatrag/: __init__.py
bharatrag/embeddings/: indic_embeddings.py
bharatrag/integrations/: langchain.py  llamaindex.py
bharatrag/metrics/: answer_relevance.py  context_relevance.py  groundedness.py
bharatrag/utils/: helpers.py
data/: benchmark.json
examples/: run_benchmark.py
scripts/: upload_to_huggingface.py
tests/: test_metrics.py
