[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bharatrag"
version = "0.1.0"
description = "RAG evaluation library for Indian languages (Hindi, Marathi)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Pradnya Gundu", email = "gundupradnya@gmail.com"}
]
keywords = ["RAG", "evaluation", "Hindi", "Marathi", "Indic", "NLP", "LLM"]
dependencies = [
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/pradnyagundu/bharatrag"
Repository = "https://github.com/pradnyagundu/bharatrag"

[tool.setuptools.packages.find]
where = ["."]
include = ["bharatrag*"]