[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bharatrag"
version = "0.1.9"
description = "RAG evaluation library for Indian languages (Hindi, Marathi, Tamil, Bengali, Telugu, Gujarati)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Pradnya Gundu", email = "gundupradnya@gmail.com"}
]
keywords = ["RAG", "evaluation", "Hindi", "Marathi", "Indic", "NLP", "LLM"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: Hindi",
    "Natural Language :: Marathi",
    "Natural Language :: Tamil",
    "Natural Language :: Bengali",
    "Natural Language :: Telugu",
    "Natural Language :: Gujarati",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
langchain = [
    "langchain-core>=0.1.0",
]
llamaindex = [
    "llama-index-core>=0.10.0",
]

[project.urls]
Homepage = "https://github.com/pradnyagundu/bharatrag"
Repository = "https://github.com/pradnyagundu/bharatrag"

[tool.setuptools.packages.find]
where = ["."]
include = ["bharatrag*"]